[gd_scene load_steps=11 format=3 uid="uid://drhsbv7ry1lnp"]

[ext_resource type="Theme" uid="uid://b8ikq1gvmxsgp" path="res://resources/theme.tres" id="1_m2nsm"]
[ext_resource type="Script" path="res://scenes/online_battle/lobby/room/room.gd" id="2_4mrey"]
[ext_resource type="Material" uid="uid://csnkk5ulllaxk" path="res://shaders/sky/sky.material" id="2_t0w5s"]
[ext_resource type="Texture2D" uid="uid://dl847jxlc5jay" path="res://resources/battlefield_themes/green_grass/sky.png" id="4_gsmrn"]
[ext_resource type="PackedScene" uid="uid://tk6s5oluvidw" path="res://scenes/online_battle/lobby/room/player_slot/player_slot.tscn" id="4_vncec"]
[ext_resource type="PackedScene" uid="uid://d0jrn2xo773qv" path="res://scenes/common/buttons/go_back_button/go_back_button.tscn" id="5_csr0e"]
[ext_resource type="PackedScene" uid="uid://d0p6vdi5tjnfe" path="res://scenes/online_battle/lobby/room/chat_box/chat_box.tscn" id="5_j56qe"]
[ext_resource type="PackedScene" uid="uid://cniblhu062ir" path="res://scenes/popup/popup.tscn" id="8_pevc4"]
[ext_resource type="PackedScene" uid="uid://cn1xpwhtwrkon" path="res://scenes/online_battle/lobby/room/custom_battlefield_settings/custom_battlefield_settings.tscn" id="8_qr6s3"]
[ext_resource type="PackedScene" uid="uid://ddv5saf6lai73" path="res://scenes/online_battle/lobby/room/team_setup/p2p_team_setup.tscn" id="10_4uhhi"]

[node name="Room" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_m2nsm")
script = ExtResource("2_4mrey")

[node name="Control" type="Control" parent="."]
layout_mode = 2
anchors_preset = 0

[node name="BG" type="TextureRect" parent="Control"]
unique_name_in_owner = true
material = ExtResource("2_t0w5s")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 4270.0
offset_bottom = 2411.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.27, 0.27)
texture = ExtResource("4_gsmrn")
expand_mode = 1
stretch_mode = 1

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
alignment = 1

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 2
size_flags_stretch_ratio = 0.65
theme_override_constants/separation = 20

[node name="Control" type="Control" parent="MarginContainer/VBoxContainer/HBoxContainer2"]
custom_minimum_size = Vector2(87, 0)
layout_mode = 2

[node name="GoBackButton" parent="MarginContainer/VBoxContainer/HBoxContainer2/Control" instance=ExtResource("5_csr0e")]
unique_name_in_owner = true
layout_mode = 2

[node name="RoomNameLabel" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
text = "<ROOM NAME>"

[node name="RoomIdLabel" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 10
text = "@ROOM_CODE: <ROOM ID>"

[node name="CopyButton" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
text = "@COPY"

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 30
alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 30
alignment = 1

[node name="PlayerSlot1" parent="MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer" instance=ExtResource("4_vncec")]
unique_name_in_owner = true
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_type_variation = &"LabelLarge"
text = "VS."

[node name="PlayerSlot2" parent="MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer" instance=ExtResource("4_vncec")]
unique_name_in_owner = true
layout_mode = 2

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 20
alignment = 1

[node name="ReadyButton" type="Button" parent="MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
visible = false
custom_minimum_size = Vector2(250, 55)
layout_mode = 2
size_flags_horizontal = 4
text = "@READY"

[node name="StartButton" type="Button" parent="MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
custom_minimum_size = Vector2(250, 55)
layout_mode = 2
size_flags_horizontal = 4
disabled = true
text = "@START"

[node name="TeamSetupButton" type="Button" parent="MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
custom_minimum_size = Vector2(250, 0)
layout_mode = 2
text = "@TEAM_SETUP"

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 1.8
theme_override_constants/margin_left = 50
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 50

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/MarginContainer"]
layout_mode = 2

[node name="ChatBox" parent="MarginContainer/VBoxContainer/MarginContainer/HBoxContainer" instance=ExtResource("5_j56qe")]
unique_name_in_owner = true
custom_minimum_size = Vector2(500, 0)
layout_mode = 2
size_flags_horizontal = 3

[node name="CustomBattlefieldSettings" parent="MarginContainer/VBoxContainer/MarginContainer/HBoxContainer" instance=ExtResource("8_qr6s3")]
unique_name_in_owner = true
layout_mode = 2

[node name="TeamSetup" parent="." instance=ExtResource("10_4uhhi")]
unique_name_in_owner = true
visible = false
layout_mode = 1

[node name="Popup" parent="." instance=ExtResource("8_pevc4")]
